syntax = "proto3";

package pb;

option go_package = "dmsg/pb";

enum PID {
    CREATE_MAILBOX_RES = 0;
    CREATE_MAILBOX_REQ = 1;
    RELEASE_MAILBOX_RES = 2;
    RELEASE_MAILBOX_REQ = 3;
    SEEK_MAILBOX_RES = 4;
    SEEK_MAILBOX_REQ = 5;
    READ_MAILBOX_MSG_RES = 6;
    READ_MAILBOX_MSG_REQ = 7;
    SEND_MSG_RES = 8;
    SEND_MSG_REQ = 9;
    CUSTOM_STREAM_PROTOCOL_RES = 10;
    CUSTOM_STREAM_PROTOCOL_REQ = 11;
    CUSTOM_PUBSUB_PROTOCOL_RES = 12;
    CUSTOM_PUBSUB_PROTOCOL_REQ = 13;
}

message BasicData {
    string ID = 1;
    PID PID = 2;
    int64 TS = 3;
    string peerID = 4;
    string pubkey = 5;
    bytes sig = 7;
    string ver = 8; 
}

message RetCode {
    int32 code = 1;
    string result = 2;
}

message SendMsgReq {
    BasicData basicData = 1;
    string destPubkey = 2;
    bytes content = 3;
    bool needResponse = 4;
}

message SendMsgRes {
    BasicData basicData = 1;
    RetCode retCode = 2;
}

message ReadMailboxReq {
    BasicData basicData = 1;
}

message MailboxItem {
    string key = 1;
    bytes content = 2;
}

message ReadMailboxRes {
    BasicData basicData = 1;
    repeated MailboxItem contentList = 2;
    RetCode retCode = 3;
}

message CreateMailboxReq {
    BasicData basicData = 1;
}

message CreateMailboxRes {
    BasicData basicData = 1;
    RetCode retCode = 2;
}

message ReleaseMailboxReq {
    BasicData basicData = 1;
}

message ReleaseMailboxRes {
    BasicData basicData = 1;
    RetCode retCode = 2;
}

message SeekMailboxReq {
    BasicData basicData = 1;
}

message SeekMailboxRes {
    BasicData basicData = 1;
    RetCode retCode = 3;
}

message CustomProtocolReq {
    BasicData basicData = 1;
    string pID = 2;
    bytes content = 3;
}

message CustomProtocolRes {
    BasicData basicData = 1;
    string pID = 2;
    bytes content = 3;
    RetCode retCode = 4;
}